# inx-debugger

./: .gitignore  .gitmodules  CMakeLists.txt  \  compile_commands.json
examples/: hello_world.cpp
src/: breakpoint.cc  breakpoint.hh  common_helper.cc  common_helper.hh  debugger.cc  debugger.hh  inxgdb.cpp  registers.cc  registers.hh
